Changes before udating the apache version

--- a/PHP_Project_with_Bootstrap/Template/sample.html
+++ b/PHP_Project_with_Bootstrap/Template/sample.html
@@ -10,7 +10,12 @@
     <table class="table table-stripped">
         <tr>
             <th></th>
+            <td></td>
         </tr>
     </table>
+
+    <div class="badge badge-secondary"></div>
+
+    <button class="btn"><i class="fa-solid fa-list" style="color: #e7a3f5;"></i>Items</button>
 </body>
 </html>
